Resolve code after commit
